[tool.poetry]
name = "notechat"
version = "0.1.0"
description = "a CLI that lets you chat with your markdown notes"
authors = ["Mykal Machon <mykal@tinybox.dev>"]
license = "see LICENSE"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
langchain = "^0.0.345"
openai = "^1.3.7"
faiss-cpu = "^1.7.4"
typer = {extras = ["all"], version = "^0.9.0"}
tiktoken = "^0.5.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
